--- a/forkafest.html
+++ b/forkafest.html
@@ -48,15 +48,15 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar">
+  <nav class="navbar" style="z-index: 999;">
     <div class="logo" style="margin-right: 30px;">
-      <a href="#" style="color: #0d47a1;">Your Logo</a>
+      <a href="#">Your Logo</a>
     </div>
     <ul class="nav-links">
-      <li><a href="#" style="color: #0d47a1;">Beranda</a></li>
-      <li><a href="#" style="color: #0d47a1;">Tentang kami</a></li>
-      <li><a href="#" style="color: #0d47a1;">Prestasi</a></li>
-      <li><a href="forkafest.html" style="color: #0d47a1;">Forkafest</a></li>
+      <li><a href="/">Beranda</a></li>
+      <li><a href="/profil.html">Tentang kami</a></li>
+      <li><a href="/prestasi.html">Prestasi</a></li>
+      <li><a href="/forkafest.html">Forkafest</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
@@ -124,7 +124,7 @@
         <div class="row">
           <h2 class="brothree" style="color: #FFB703;; padding: 10px; font-size: 54px;">Forkafest 2023</h2>
         </div>
-        <div class="brofour" class="col-md-12" style="font-size: 24px;">
+        <div class="brofour" class="col-md-12" >
           <p style="font-family: 'Mukta', sans-serif;">ForkaFest (Informatika Festival) adalah sebuah festival yang
             berkaitan dengan bidang informatika. Festival ini dirancang untuk menyatukan para profesional, penggiat, dan
             pecinta informatika untuk merayakan dan mengapresiasi perkembangan terbaru dalam dunia teknologi dan
