--- a/profil.html
+++ b/profil.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="slider.css">
   <link rel="stylesheet" href="responsif.css">
   <link rel="stylesheet" href="style.css">
+
   <!-- font -->
 
   <style>
@@ -48,10 +49,10 @@
       <a href="#">Your Logo</a>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Beranda</a></li>
-      <li><a href="#">Tentang kami</a></li>
-      <li><a href="#">Prestasi</a></li>
-      <li><a href="forkafest.html">Forkafest</a></li>
+      <li><a href="/">Beranda</a></li>
+      <li><a href="/profil.html">Tentang kami</a></li>
+      <li><a href="/prestasi.html">Prestasi</a></li>
+      <li><a href="/forkafest.html">Forkafest</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
@@ -111,7 +112,7 @@
     <!-- deskripsi -->
     <section style="background-color: #0d47a1;">
       <div class="container"
-        style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+        style="min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row">
           <h2 style="color: #fff; padding: 50px;">Teknik Informatika Universitas Muhammadiyah Jember</h2>
         </div>
