--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar">
+  <nav class="navbar" style="z-index: 999;">
     <div class="logo" style="margin-right: 30px;">
       <a href="#">Your Logo</a>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Beranda</a></li>
-      <li><a href="#">Tentang kami</a></li>
-      <li><a href="#">Prestasi</a></li>
-      <li><a href="forkafest.html">Forkafest</a></li>
+      <li><a href="/">Beranda</a></li>
+      <li><a href="/profil.html">Tentang kami</a></li>
+      <li><a href="/prestasi.html">Prestasi</a></li>
+      <li><a href="/forkafest.html">Forkafest</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
@@ -59,35 +59,38 @@
       <div class="line"></div>
     </div>
   </nav>
-<style>
-  .slider-content .show {
-  position: relative;
-}
+  <style>
+    .slider-content .show {
+      position: relative;
+    }
 
-.slider-content .show .img-c::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to right, #0d48a1 0%, rgba(0, 0, 255, 0) 100%);
-  z-index: 1;
-  mix-blend-mode: multiply;
-}
-.img-c {
-  height: 100vh;
-  width: 100% !important;
-}
-.img-c img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-.content {
-  z-index: 4;
-}
-</style>
+    .slider-content .show .img-c::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to right, #0d48a1 0%, rgba(0, 0, 255, 0) 100%);
+      z-index: 1;
+      mix-blend-mode: multiply;
+    }
+
+    .img-c {
+      height: 100vh;
+      width: 100% !important;
+    }
+
+    .img-c img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+
+    .content {
+      z-index: 4;
+    }
+  </style>
   <main>
     <!-- slider -->
     <section style="color: white;">
@@ -96,7 +99,7 @@
           <div class="slider-content">
             <figure class="show">
               <div class="img-c">
-              <img src="assets/img/bgg/unj.jpg" alt="Coffee">
+                <img src="assets/img/bgg/unj.jpg" alt="Coffee">
               </div>
               <div class="content">
                 <div class="col-md-6"
@@ -115,11 +118,13 @@
             </figure>
             <figure>
               <div class="img-c">
-              <img src="assets/img/bg/2.jpg" alt="Lamp"></div>
+                <img src="assets/img/bg/2.jpg" alt="Lamp">
+              </div>
             </figure>
             <figure>
               <div class="img-c">
-              <img src="assets/img/bg/3.jpg" alt="Plant"></div>
+                <img src="assets/img/bg/3.jpg" alt="Plant">
+              </div>
             </figure>
           </div>
           <div class="slider-navigation">
