--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
                     <h1 class="title">Teknik Informatika</h1>
-                    <p>Unversitas Muhammadiyah Jember</p>
+                    <p class="sub-title">Unversitas Muhammadiyah Jember</p>
                   </div>
                 </div>
                 <div class="col-md-6"
