--- a/prestasi.html
+++ b/prestasi.html
@@ -81,15 +81,27 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
+      }
+      .heading {
+        padding-bottom: 0;
+        padding-left: 50px;
+      }
+      @media screen and (max-width: 768px) {
+        .heading {
+          padding-bottom: 35vh;
+          padding-left: 10px;
+        }
       }
     </style>
     <section class="about"
-      style="background-color: #f8f8f8 !important; background-image: url(assets/img/bgg/bgp.jpeg); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; color: #fff;">
+      style="background-color: #f8f8f8 !important; background-image: url(assets/img/bgg/pres.JPG); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; color: #fff;">
       <div class="container-fluid" style="height: 100vh;">
         <div class="img-c">
-          <h1 class="title" style="z-index: 3;">Prestasi dan Capaian</h1>
-          <h1 class="title" style="z-index: 3;">S1 Teknik Informatika</h1>
+          <div style="z-index: 3;" class="heading">
+            <h1 class="title">Prestasi dan Capaian</h1>
+            <p class="sub-title">Teknik Informatika</p>
+          </div>
         </div>
       </div>
     </section>
@@ -124,6 +136,8 @@
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
+            /* shadow box */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.801);
           }
           .card-p2 {
             display: flex;
@@ -134,6 +148,8 @@
             background-color: #0d47a1;
             border-radius: 10px;
             color: rgb(255, 255, 255);
+            /* shadow box */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.801);
           }
 
           @media screen and (max-width: 768px) {
