--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
     <ul class="nav-links">
       <li><a href="/">Beranda</a></li>
-      <li><a href="/profil.html">Tentang kami</a></li>
-      <li><a href="/prestasi.html">Prestasi</a></li>
-      <li><a href="/forkafest.html">Forkafest</a></li>
+      <li><a href="profil.html">Tentang kami</a></li>
+      <li><a href="prestasi.html">Prestasi</a></li>
+      <li><a href="forkafest.html">Forkafest</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
@@ -111,19 +111,27 @@
                 </div>
                 <div class="col-md-6"
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-                  <h2>Title 2</h2>
-                  <p>Content 2</p>
                 </div>
               </div>
             </figure>
             <figure>
               <div class="img-c">
-                <img src="assets/img/bg/2.jpg" alt="Lamp">
+                <img src="assets/img/bg/4.png" alt="bg1">
+              </div>
+              <div class="content">
+                <div class="col-md-6"
+                  style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                  <div>
+                    <h1 class="title">Teknik Informatika</h1>
+                    <p class="sub-title">Prodi TI Pertama di Jember</p>
+                    <p class="desc">Bersama Program Studi Teknik Informatika Universitas Muhammadiyah Jember, Anda akan menemukan pengalaman belajar yang tidak hanya fokus ke ilmu pengetahuan melainkan juga pelaksanaan nilai-nilai keislaman untuk membentuk karakter yang religious, profesional, dan competitive. Serta dukungan fasilitas belajar yang mendukung dan kondusif untuk mengembangkan potensi Anda.</p>
+                  </div>
+                </div>
               </div>
             </figure>
             <figure>
               <div class="img-c">
-                <img src="assets/img/bg/3.jpg" alt="Plant">
+                <img src="assets/img/bg/3.jpg" alt="bg2">
               </div>
             </figure>
           </div>
