--- a/prestasi.html
+++ b/prestasi.html
@@ -49,9 +49,9 @@
     </div>
     <ul class="nav-links">
       <li><a href="/">Beranda</a></li>
-      <li><a href="/profil.html">Tentang kami</a></li>
-      <li><a href="/prestasi.html">Prestasi</a></li>
-      <li><a href="/forkafest.html">Forkafest</a></li>
+      <li><a href="profil.html">Tentang kami</a></li>
+      <li><a href="prestasi.html">Prestasi</a></li>
+      <li><a href="forkafest.html">Forkafest</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
