--- a/prestasi.html
+++ b/prestasi.html
@@ -68,8 +68,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100vh;
-        height: 100%;
+        width: 100%;
+        height: 100vh;
         background: linear-gradient(to right, #0d47a1 0%, rgba(0, 0, 255, 0) 100%);
         z-index: 1;
         mix-blend-mode: multiply;
