--- a/profil.html
+++ b/profil.html
@@ -70,7 +70,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background: linear-gradient(to right, #0d47a1 0%, rgba(0, 0, 255, 0) 100%);
         z-index: 1;
         mix-blend-mode: multiply;
